# gtsom

./: .gitignore  404.html  README.md  gitdeploy.sh  gitinit.sh  gitremakeipynb.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
api/: index.html
docs/: api.md  gtsom_blobs_tutorial.ipynb  gtsom_mnist_tutorial.ipynb  index.md
examples/: test_MNIST.py  test_blobs.py  test_embedding.py  test_gtsom_init.py  test_vis_tools.py
gtsom_blobs_tutorial/: index.html
gtsom_mnist_tutorial/: index.html
search/: search_index.json
site/: index.html  objects.inv
site/api/: index.html
site/gtsom_mnist_tutorial/: index.html
site/search/: search_index.json
src/gtsom/: __init__.py  dr_metrics.py  embedding.py  gtsom.py  kernel.py  parallel.py  utils.py  vis_tools.py
src/gtsom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gtsom/archive/: embedding_b4_update_coords.py  gtsom_b4_fit.py  gtsom_b4_parallel_numba.py  vis_tools_b4review062926.py
